remove valtech references

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,34 +1,20 @@
 ---
-- name: Ensure user exists
-  user:
-    name: "{{ generic_sonarqube_username }}"
-    uid: "{{ generic_sonarqube_uid }}"
-    create_home: false
-    shell: /sbin/nologin
-    state: present
-
-- name: Ensure group exists
-  group:
-    name: "{{ generic_sonarqube_groupname }}"
-    gid: "{{ generic_sonarqube_gid }}"
-    state: present
-
-- name: Create data path
+- name: Create base path
   file:
-    path: "{{ generic_sonarqube_data_path }}"
+    path: "{{ generic_sonarqube_base_path }}"
     state: directory
     recurse: true
-    owner: "{{ generic_sonarqube_username }}"
-    group: "{{ generic_sonarqube_groupname }}"
+    owner: "{{ generic_sonarqube_uid }}"
+    group: "{{ generic_sonarqube_gid }}"
 
-- name: Create subfolders
+- name: Create additional paths
   file:
-    path: "{{ generic_sonarqube_data_path }}/{{ item }}"
+    path: "{{ item }}"
     state: directory
     recurse: true
-    owner: "{{ generic_sonarqube_username }}"
-    group: "{{ generic_sonarqube_groupname }}"
-  loop: "{{ generic_sonarqube_subfolder }}"
+    owner: "{{ generic_sonarqube_uid }}"
+    group: "{{ generic_sonarqube_gid }}"
+  loop: "{{ generic_sonarqube_additional_path }}"
 
 - name: Set vm.max_map_count
   sysctl:
@@ -44,7 +30,7 @@
     image: "{{ generic_sonarqube_container_image }}"
     user: "{{ generic_sonarqube_uid }}:{{ generic_sonarqube_gid }}"
     published_ports: "{{ generic_sonarqube_container_ports }}"
-    env: "{{ generic_sonarqube_container_env }}"
+    env: "{{ generic_sonarqube_container_env | combine(generic_sonarqube_container_additional_env) }}"
     volumes: "{{ generic_sonarqube_container_volumes }}"
     links: "{{ generic_sonarqube_container_links }}"
     state: "{{ generic_sonarqube_container_state }}"
