--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,19 +1,28 @@
-generic_sonarqube_data_path: "/opt/sonarqube"
-generic_dtrack_subfolder:
-  - "conf"
-  - "logs"
-  - "data"
-  - "extensions"
-  - "bundled-plugins"
-generic_sonarqube_subfolder: []
-generic_sonarqube_username: "sonarqube"
-generic_sonarqube_uid: 2003
-generic_sonarqube_groupname: "sonarqube"
-generic_sonarqube_gid: 2003
-
+generic_sonarqube_base_path: "/opt/sonarqube"
+generic_sonarqube_additional_path:
+  - "{{ generic_sonarqube_base_path }}/conf"
+  - "{{ generic_sonarqube_base_path }}/logs"
+  - "{{ generic_sonarqube_base_path }}/data"
+  - "{{ generic_sonarqube_base_path }}/extensions"
+  - "{{ generic_sonarqube_base_path }}/bundled-plugins"
+generic_sonarqube_uid: 1000
+generic_sonarqube_gid: 1000
 generic_sonarqube_max_map_count: "262144"
+
 generic_sonarqube_jdbc_url: "jdbc:postgresql://localhost:5432/sonarqube"
-generic_sonarqube_ldap_group_cn: "CN=Mobility Employees All,OU=Staff,OU=Mobility,DC=DE,DC=valtech,DC=com"
+generic_sonarqube_jdbc_username: ""
+generic_sonarqube_jdbc_password: ""
+generic_sonarqube_web_context: "/"
+generic_sonarqube_search_javaadditionalopts: "-Dlog4j2.formatMsgNoLookups=true"
+generic_sonarqube_security_realm: "LDAP"
+generic_sonarqube_ldap_url: "ldap://exmaple.tld"
+generic_sonarqube_ldap_user_basedn: "dc=example,dc=tld"
+generic_sonarqube_ldap_user_request: "(&(objectClass=user)(sAMAccountName={login}))"
+generic_sonarqube_ldap_user_realnameattribute: "cn"
+generic_sonarqube_ldap_user_emailattribute: "email"
+generic_sonarqube_ldap_group_basedn: "dc=example,dc=tld"
+generic_sonarqube_ldap_group_request: "(&(objectClass=group)(member:1.2.840.113556.1.4.1941:={dn}))"
+generic_sonarqube_ldap_group_idattribute: "sAMAccountName"
 
 # Ports that should be opened in ufw
 generic_sonarqube_allow_firewall_ports:
@@ -25,29 +34,13 @@ generic_sonarqube_container_image: "sonarqube:9.2.3-community"
 generic_sonarqube_container_ports:
   - "9000:9000"
 generic_sonarqube_container_volumes:
-  - "{{ generic_sonarqube_data_path }}/conf:/opt/sonarqube/conf"
-  - "{{ generic_sonarqube_data_path }}/logs:/opt/sonarqube/logs"
-  - "{{ generic_sonarqube_data_path }}/data:/opt/sonarqube/data"
-  - "{{ generic_sonarqube_data_path }}/extensions:/opt/sonarqube/extensions"
-  - "{{ generic_sonarqube_data_path }}/bundled-plugins:/opt/sonarqube/lib/bundled-plugins"
+  - "{{ generic_sonarqube_base_path }}/conf:/opt/sonarqube/conf"
+  - "{{ generic_sonarqube_base_path }}/logs:/opt/sonarqube/logs"
+  - "{{ generic_sonarqube_base_path }}/data:/opt/sonarqube/data"
+  - "{{ generic_sonarqube_base_path }}/extensions:/opt/sonarqube/extensions"
+  - "{{ generic_sonarqube_base_path }}/bundled-plugins:/opt/sonarqube/lib/bundled-plugins"
 generic_sonarqube_container_links: []
-generic_sonarqube_container_env:
-  SONAR_JDBC_URL: "{{ generic_sonarqube_jdbc_url }}"
-  SONAR_JDBC_USERNAME: "{{ generic_sonarqube_jdbc_username }}"
-  SONAR_JDBC_PASSWORD: "{{ generic_sonarqube_jdbc_password }}"
-  SONAR_WEB_CONTEXT: "/"
-  SONAR_SEARCH_JAVAADDITIONALOPTS: "-Dlog4j2.formatMsgNoLookups=true"
-  SONAR_SECURITY_REALM: "LDAP"
-  LDAP_URL: "ldap://gc.de.valtech.com:3268"
-  LDAP_BINDDN: "{{ generic_sonarqube_ldap_username }}"
-  LDAP_BINDPASSWORD: "{{ generic_sonarqube_ldap_password }}"
-  LDAP_USER_BASEDN: "dc=valtech,dc=com"
-  LDAP_USER_REQUEST: "(&(objectClass=user)(sAMAccountName={login})(memberOf:1.2.840.113556.1.4.1941:={{ generic_sonarqube_ldap_group_cn }}))"
-  LDAP_USER_REALNAMEATTRIBUTE: "cn"
-  LDAP_USER_EMAILATTRIBUTE: "email"
-  LDAP_GROUP_BASEDN: "dc=de,dc=valtech,dc=com"
-  LDAP_GROUP_REQUEST: "(&(objectClass=group)(member={dn}))"
-  LDAP_GROUP_IDATTRIBUTE: "sAMAccountName"
+generic_sonarqube_container_additional_env: {}
 
 generic_sonarqube_container_state: "started"
 generic_sonarqube_container_recreate: no
