--- a/meta/main.yml
+++ b/meta/main.yml
@@ -4,7 +4,7 @@ galaxy_info:
   author: Valtech Mobility
   company: Valtech Mobility
 
-  issue_tracker_url: https://intranet.valtech.com/vita/projects/VMCQ
+  issue_tracker_url: https://github.com/ValtechMobility/generic_sonarqube_role/issues
 
   min_ansible_version: 2.9
 
@@ -15,6 +15,7 @@ galaxy_info:
 
   galaxy_tags:
   - sonarqube
+  - docker
   - ubuntu
 
 dependencies: []
