--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -15,7 +15,7 @@ generic_sonarqube_jdbc_password: ""
 generic_sonarqube_web_context: "/"
 generic_sonarqube_search_javaadditionalopts: "-Dlog4j2.formatMsgNoLookups=true"
 generic_sonarqube_security_realm: "LDAP"
-generic_sonarqube_ldap_url: "ldap://exmaple.tld"
+generic_sonarqube_ldap_url: "ldap://example.tld"
 generic_sonarqube_ldap_user_basedn: "dc=example,dc=tld"
 generic_sonarqube_ldap_user_request: "(&(objectClass=user)(sAMAccountName={login}))"
 generic_sonarqube_ldap_user_realnameattribute: "cn"
